@@ -49,16 +49,14 @@ x update the tutorial
 
 x Andy: build issue if HAM_DISABLE_COMPRESSION is defined (win32)
 
-o Mark: reported bug with transactions and HAM_ONLY_DUPLICATES (see mail)
-
-o Mark: reported bug with transactions and HAM_ONLY_DUPLICATES (see mail)
-
-o mail an Tony B, Curt M., andere
+x Mark: reported bug with transactions and HAM_ONLY_DUPLICATES (see mail)
 
 o implement support for approx. matching (-> sevencat)
     o identify test cases
     o write test-driven
     o update documentation
+
+o mail an Tony B, Curt M., andere
 
 o ham_txn_commit can return errors (i.e. caused by I/O or the inducer)
     when it flushes the txn, but the commit was already logged
